[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["command-line-utilities"]
description = "Batch rename utility for developers"
edition = "2021"
homepage = "https://github.com/yaa110/nomino"
license = "MIT OR Apache-2.0"
name = "nomino"
readme = "README.md"
repository = "https://github.com/yaa110/nomino"
version = "1.3.0"

[dependencies]
anyhow = "1.0.71"
atty = "0.2.14"
clap = {version = "3.2.25", features = ["yaml"]}
colored = "2.0.4"
natord = "1.0.9"
prettytable-rs = "0.10.0"
regex = "1.9.0"
serde_json = "1.0.103"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"
tempdir = "0.3.7"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
panic = "abort"
strip = true
